# QtTdd

./: .travis.yml  CMakeLists.txt  cmake_install.cmake
src/: TestRunner.cpp  TestRunner.h  testClntWebSrv.cpp  testClntWebSrv.h
